@@ -1,5 +1,6 @@
 # OpenTrader
 
+# OpenTrader
 
 OpenTrader
 
@@ -35,6 +36,7 @@ the Windows version, and the AMQP server version and version of the Pika.**
 This code in known to run under Linux Wine (1.7.x), so this project
 bridges Metatrader to RabbitMQ under Linux.
 
+### Installation
 
 You must have `cmd2` installed the Python that runs this script:
 see https://bitbucket.org/catherinedevlin/cmd2
@@ -61,6 +63,7 @@ python setup.py
 to create the OTCmd2 script. Run `OTCmd2 help` (see below).
 
 
+### Project
 
 Please file any bugs in the issue tracker:
 https://github.com/OpenTrading/OpenTrader/issues
@@ -72,6 +75,7 @@ the important pages back into the documentation in the share/doc directory.
 You will need to be signed into github.com to see or edit in the wiki.
 
 
+## OTCmd2.py
 
 This script can be run from the command line to send commands
 to a OTMql4AMQP enabled Metatrader. It will start a command loop to
@@ -118,6 +122,7 @@ If you have `pyrabbit` installed, and iff the rabbitmq_management plugin
 has been installed in your server, you can introspect some useful
 information if the HTTP interface is enabled with the `rabbit` command.
 
+### Messaging Format
 
 The messaging to and from OTMql4Py is still being done with a
 very simple format:
@@ -137,6 +142,7 @@ This may breaks if the sPayload args or value contain a | -
 we will probably replace this with json or pickled serialization, or kombu.
 
 
+### Examples
 
 There are some example OTCmd2 command scripts in the `share/examples`
 directory that you can run from the command line with the stdin
@@ -157,7 +163,9 @@ WARN: No retval returned in 60 seconds
 Note that you can use this scripting to open and close orders.
 
 
+## Pandas love Omlettes!
 
+### (And you thought pandas were vegans :-)
 
 There are many steps to making a good Omlette:
 
@@ -175,6 +183,7 @@ There are many steps to making a good Omlette:
 
 
 
+## Tests
 
 Tests are in the `tests/` directory and use `pytest-bdd`
 https://github.com/pytest-dev/pytest-bdd/
@@ -185,6 +194,7 @@ provide a lot of documentation on the internals of `OTCmd2.py`.
 
 
 
+### OTCmd2_ini
 
     Settings for OTCmd2 are in a configobj .ini file that by default is
     found in the same place that the OTCmd2.py file is found, but you can
@@ -192,6 +202,7 @@ provide a lot of documentation on the internals of `OTCmd2.py`.
     an alternate location. It uses configobj with unrepr=True
     so the values are Python, not just strings.
 
+## OTBackTest.py
 
 OTBackTest.py can run as a stand-alone script for backtesting.
 
@@ -216,6 +227,29 @@ optional arguments:
   -H SHDFSTORE, --hdf SHDFSTORE
                         store the recipe and servings in an hdf5 store
 ```
+## OTPpnAmgc
+
+OTPpnAmgc charts a CSV file of Open High Low Close Volume values, along with
+the MACD and RSI, using matplotlib. Give the CsvFile Symbol Timeframe and Year
+as arguments to the script. The Timeframe is the period in minutes: e.g. 1 60
+240 1440 YMMV: IT WILL NOT WORK for less than Daily: 1440
+
+```
+positional arguments:
+  lArgs                 the Symbol Timeframe and Year to backtest (required)
+
+optional arguments:
+  -h, --help            show this help message and exit
+  -u, --use_talib       Use Ta-lib for chart operations
+  --iShortSMA ISHORTSMA
+  --iLongSMA ILONGSMA
+  --iRsiUpper IRSIUPPER
+  --iRsiLower IRSILOWER
+  --iMacdSlow IMACDSLOW
+  --iMacdFast IMACDFAST
+  --iMacdEma IMACDEMA
+```
+### OTCmd2 subscribe
 ```
 
 Subscribe to messages from RabbitMQ on a given topic:
@@ -243,6 +277,7 @@ Options:
                         the target chart to subscribe to
 
 ```
+### OTCmd2 publish
 ```
 
 Publish a message via RabbitMQ to a given chart on a OTMql4Py enabled terminal:
@@ -264,6 +299,7 @@ Options:
                         the target chart to publish to (or: ANY ALL NONE)
 
 ```
+### OTCmd2 chart
 ```
 
 Set and query the chart used for messages to and from RabbitMQ:
@@ -282,6 +318,7 @@ Options:
   -h, --help  show this help message and exit
 
 ```
+### OTCmd2 order
 ```
 
   ord list          - list the ticket numbers of current orders.
@@ -305,6 +342,7 @@ Options:
                         the target chart to order with (or: ANY ALL NONE)
 
 ```
+### OTCmd2 backtest
 ```
 
 back feed dir
@@ -349,6 +387,7 @@ Options:
                         recipe to backtest (one of SMARecipe
 
 ```
+### OTCmd2 rabbit
 ```
 
 If we have pyrabbit installed, and iff the rabbitmq_management plugin
